# zap

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SELF-UPDATE-SETUP.md  cliff.toml  i18n.toml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_ssh_tmux.yml  04_ssh_legacy.yml  config.yml
.github/actions/prepare_environment/: action.yml
.github/workflows/: release_configurations.json  stale.yml  upstream-watch.yml  zap_release.yml
app/: Cargo.toml  build.rs  i18n.toml
app/channels/oss/: dev.zap.Zap.desktop
app/i18n/en/: warp.ftl
app/i18n/ja/: warp.ftl
app/i18n/zh-CN/: warp.ftl
app/src/: app_menus.rs  app_state.rs  crash_recovery.rs  i18n.rs  lib.rs  local_managed_secrets.rs  menu.rs  profiling.rs  root_view.rs  server_time.rs
app/src/ai/: llms.rs  (+6 more)
crates/http_client/: Cargo.toml
crates/http_client/src/: lib.rs  proxy.rs  proxy_tests.rs
crates/warp_ssh_manager/: Cargo.toml
docs/: migrate-from-warp.md  roadmap.md
script/: Entitlements.plist  analyze-prompt-cache.ps1  generate_changelog  prepare_bundled_resources  setup-merge-drivers.sh
script/linux/: bundle  bundle_arch  bundle_rpm  linuxdeploy-plugin-warp
script/macos/: bundle
script/wasm/: bundle
script/windows/: README.md  bundle.ps1  windows-installer.iss
specs/byop-placeholder-tool-results/: ISSUES.md
specs/gh-110-ssh-config-import/: PRODUCT.md
themes/: one_dark.yaml  tokyo_night.yaml
website/: CHANGELOG.md  README.md  nixpacks.toml
website/design/: Zap Docs.html  Zap.html
website/src/: content.config.ts
(+434 files in other folders)
