[package]
name = "http_client"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[features]
test-util = []

[dependencies]
anyhow.workspace = true
async-compat.workspace = true
async-stream.workspace = true
bytes.workspace = true
cfg-if.workspace = true
futures.workspace = true
http.workspace = true
log.workspace = true
oauth2.workspace = true
prevent_sleep.workspace = true
prost.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
warp_core.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo.workspace = true
wasm-bindgen-futures.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Tests only: installs the rustls default crypto provider to avoid reqwest::ClientBuilder::build()
# panicking in a bare unit-test process. In production code this installation is handled by `app/src/lib.rs::init_common`.
rustls.workspace = true
